--- a/style.css
+++ b/style.css
@@ -254,7 +254,7 @@ button {
 .searchParamDiv {
 	height:auto;
 	border-bottom:2px solid #242F40;
-	padding:96px 0;
+	padding:96px 0 0 0;
 }
 #suggestions {
 	list-style-type:none;
@@ -270,6 +270,8 @@ button {
 	z-index:1;
 	box-sizing:border-box;
 	transform:translateY(-14px);
+	overflow: scroll;
+	max-height: 273.5px;
 }
 #suggestions li {
 	padding:16px 16px;
@@ -298,4 +300,27 @@ button {
 }
 #apropos a {
 	font-weight:bold;
+}
+
+.pagination{
+	display: flex;
+	justify-content: center;
+	gap: 8px;
+	padding: 76px 0 16px 0;
+	user-select: none;
+}
+
+.pagination .number{
+	font-size: x-large;
+}
+
+.pagination a{
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.pagination .button:hover{
+	cursor: pointer;
+	color: #9BE564;
 }
